# root-dataclass-example

./: CMakeLists.txt  README.md
.github/workflows/: test-compile-and-run.yml
source/: CMakeLists.txt
source/inc/: LinkDef.hh  testobject.h
source/src/: testobject.cpp  write_test.cpp
